# doc-meter

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  action.yml  doc_meter.py  pyproject.toml  reclamos_backend_docs.csv  requirements.txt
.github/workflows/: doc-meter.yml  publish.yml
