[build-system]
requires = ["setuptools>=68", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "doc-meter"
dynamic = ["version"]
description = "Mide el crecimiento de documentación en un repositorio Git"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "PunteriaCero" }]
keywords = ["documentation", "git", "metrics", "devops"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Documentation",
  "Topic :: Utilities",
]
dependencies = [
  "matplotlib>=3.7",
  "tqdm>=4.0",
]

[project.urls]
Homepage = "https://github.com/PunteriaCero/doc-meter"
Repository = "https://github.com/PunteriaCero/doc-meter"
Changelog = "https://github.com/PunteriaCero/doc-meter/blob/main/CHANGELOG.md"

[project.scripts]
doc-meter = "doc_meter:main"

[tool.setuptools]
py-modules = ["doc_meter"]

[tool.setuptools_scm]
# Escribe la versión en _version.py al hacer build
write_to = "_version.py"
